# deepcompressor

./: HF-to-ModelScope-Scripts-Summary.md  METADATA_PATH_FIX.md  Manual-ModelScope-Upload-Guide.md  Model-Cache-Optimization-Summary.md  ModelScope-Authentication-Summary.md  ModelScope-Integration-Summary.md  ModelScope-Repository-Setup.md  ModelScope-Token-Parameter-Summary.md  NUNCHAKU_METADATA_ENHANCEMENT.md  NUNCHAKU_METADATA_FINAL.md  README.md  check_modelscope_username.py  fix_git_auth_upload.py  fix_modelscope_upload.py  flux_transfer_fixed.py  pyproject.toml  run_on_server.sh  transfer_flux_dev.py
deepcompressor/: version.py
deepcompressor/app/diffusion/: ptq.py  utils.py
deepcompressor/app/llm/: config.py  ptq.py
deepcompressor/backend/: utils.py
deepcompressor/backend/nunchaku/: README_metadata.md  __init__.py  convert.py  convert_enhanced.py  convert_lora.py  utils.py  validate_metadata.py
deepcompressor/backend/qserve/: convert.py  utils.py
deepcompressor/backend/tinychat/: convert.py  linear.py  utils.py
deepcompressor/calib/: lowrank.py  rotate.py  search.py  smooth.py
deepcompressor/calib/config/: rotation.py  smooth.py
deepcompressor/csrc/: load.py  pybind.cpp
deepcompressor/csrc/quantize/: quantize.cu  quantize.h
deepcompressor/data/: codebook.py  dtype.py
deepcompressor/nn/patch/: lowrank.py
deepcompressor/nn/struct/: attn.py
deepcompressor/quantizer/: processor.py
deepcompressor/utils/: common.py  modelscope.py
docs/: HF-to-ModelScope-Transfer.md  ModelScope-Authentication.md  ModelScope-Support.md
examples/: model_transfer_list.txt  nunchaku_metadata_example.py
examples/diffusion/: .gitignore  README.md
examples/llm/: .gitignore  README.md
scripts/: batch_transfer.sh  check_modelscope_auth.py  clean_model_cache.py  hf_to_modelscope_transfer.py  quick_start_transfer.sh  server_transfer_guide.md  simple_hf_to_ms.py
(+65 files in other folders)
