[tool.poetry]
name = "deepcompressor-toolkit"
version = "0.0.2"
description = "This package is model compression toolkit for large language models and diffusion models."
authors = [
    "Yujun Lin",
    "Muyang Li",
    "Shang Yang",
    "Zhekai Zhang",
    "Haotian Tang",
    "Song Han",
]
packages = [ { include = "deepcompressor" } ]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
tqdm = "== 4.67.1"
torch = "== 2.8.0"
torchvision = "== 0.23.0"
torchmetrics = "== 1.8.1"
ninja = "== 1.13.0"
bitsandbytes = "== 0.47.0"
transformers = "== 4.55.4"
lm_eval = "== 0.4.9.1"
accelerate = "== 1.10.0"
datasets = "== 3.6.0"
sentencepiece = "== 0.2.1"
omniconfig = "== 0.1.10"
jieba = "== 0.42.1"
fuzzywuzzy = "== 0.18.0"
rouge = "== 1.0.1"
python-Levenshtein = "== 0.27.1"
protobuf = "== 6.32.0"
diffusers = "== 0.34"
clean-fid = "== 0.1.35"
dominate = "== 2.9.1"
opencv-python = "== 4.12.0.88"
einops = "== 0.8.1"
timm = "== 1.0.19"
rotary-embedding-torch = "== 0.8.9"
bs4 = "== 0.0.2"
ftfy = "== 6.3.1"
cd-fvd = "== 0.1.1"
xformers = "== 0.0.32.post2"
av = "== 15.0.0"
clip = "== 1.0"
image_reward = { git = "https://github.com/THUDM/ImageReward.git", branch = "main" }
modelscope = "== 1.29.1"

[tool.poetry.group.dev.dependencies]
matplotlib = "== 3.10.5"
ipython = "== 9.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "I", "W"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
